--- a/index.html
+++ b/index.html
@@ -35,6 +35,41 @@
         </div>
       </div>
     </nav>
+    <section id="profile">
+      <div class="section_pic-container">
+        <img src="./assets/profile-pic.png" alt="profile picture" />
+      </div>
+      <div class="section_text">
+        <p class="section_text_p1">Hello, I'm</p>
+        <h1 class="title">Ricky Gu</h1>
+        <p class="section_text_p2">Frontend Developer</p>
+        <div class="btn-container">
+          <button
+            class="btn btn-color-2"
+            onclick="window.open('./assets/resume-example.pdf')"
+          >
+            Resume
+          </button>
+          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+            Contact Info
+          </button>
+        </div>
+        <div id="socials-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="linkedin profile"
+            class="icon"
+            onclick="location.href='https://www.linkedin.com/in/jiaqi-ricky-gu/'"
+          />
+          <img
+            src="./assets/github.png"
+            alt="github profile"
+            class="icon"
+            onclick="location.href='https://github.com/JG1109'"
+          />
+        </div>
+      </div>
+    </section>
     <script src="scripts.js"></script>
   </body>
 </html>
