Build about section
- Add about section title, picture, experience and education snapshot
- Add an introduction that is a lorem ipsum paragraph
- Attach an indicator arrow mark for next section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,57 @@
         </div>
       </div>
     </section>
+    <section id="about">
+      <p class="section_text_p1">Get To Know More</p>
+      <h1 class="title">About Me</h1>
+      <div class="section-container">
+        <div class="section_pic-container">
+          <img
+            src="./assets/about-pic.png"
+            alt="profile picture"
+            class="about-pic"
+          />
+        </div>
+        <div class="about-details-container">
+          <div class="about-containers">
+            <div class="details-container">
+              <img
+                src="./assets/experience.png"
+                alt="experience icon"
+                class="icon"
+              />
+              <h3>Experience</h3>
+              <p>Frontend Development</p>
+            </div>
+            <div class="details-container">
+              <img
+                src="./assets/education.png"
+                alt="education icon"
+                class="icon"
+              />
+              <h3>Education</h3>
+              <p>UC San Diego (M.S.)<br />Purdue University (B.S.)</p>
+            </div>
+          </div>
+          <div class="text-container">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum
+              nam facere ipsam officiis minus quibusdam harum. Earum, adipisci!
+              Expedita, magni officia. Odit, unde doloribus ea, enim nulla
+              necessitatibus est velit, magnam excepturi sapiente maxime numquam
+              aliquid eveniet nihil odio! Ab repudiandae incidunt molestiae quae
+              possimus! Voluptate quas excepturi minima iusto.
+            </p>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="next section indicator"
+        class="icon arrow"
+        onclick="location.href='./#experience'"
+      />
+    </section>
     <script src="scripts.js"></script>
   </body>
 </html>
