Adjust section behavior and substitute about picture
- Remove top paddings of sections
- Add bottom margin for profile section for better spacing
- Substitute about picture

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="section_pic-container">
           <img
             src="./assets/about-pic.png"
-            alt="profile picture"
+            alt="about picture"
             class="about-pic"
           />
         </div>
